# raster-footprint

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASING.md  expected_footprint4.json  pyproject.toml  test_raster_footprint.py
.github/: pull_request_template.md
.github/workflows/: ci.yaml
docs/: api.rst  conf.py  index.rst
scripts/: lint  test
src/raster_footprint/: __init__.py  _cli.py  cli.py  constants.py  densify.py  footprint.py  mask.py  raster_footprint.py  reproject.py  simplify.py
tests/: conftest.py  notes.txt  test_cli.py  test_concave_convex_holes.py  test_densify.py  test_footprint.py  test_mask.py  test_raster_footprint.py  test_reproject.py  test_simplify.py
tests/data/: AST_L1T_00310012006175412_20150516104359-SWIR-cropped.tif  ESA_WorldCover_10m_2021_v200_N15W066_Map.multipolygon.tif  ESA_WorldCover_10m_2021_v200_N15W066_Map.multipolygon.tif.aux.xml  footprint-convexhull.json  footprint-noholes.json  footprint.json
tests/data/expected/: convex-hull-of-double-concave-shell.json  convex-hull-of-single-concave-shell.json  double-concave-shell-with-holes-epsg-32631-input.json  double-concave-shell-with-holes-epsg-32631-reprojected.json  double-concave-shell-with-holes.json  single-concave-shell.json
tests/data/geojson/: aster-all-bands.json  aster-band-2.json  aster-bands-1-4-5-6.json  concave-shell-dithered.json  concave-shell-with-duplicate-points.json  concave-shell-with-two-holes-simplified_0.8.json  concave-shell-with-two-holes.json  convex-hull-of-concave-shell.json  convex-hull-of-two-concave-shells.json  modis-convex_hull.json  modis-densify_distance-100000-simplify_tolerance-0.01.json  modis-densify_distance-100000.json  modis-densify_factor-2.json  modis-no_holes.json  modis-precision-1.json  modis-simplify_tolerance-0.05.json  modis-with_nodata.json  modis.json  shell-with-duplicate-points-removed.json  shell-with-duplicate-points.json  two-concave-shells-each-with-two-holes-epsg-32631.json  two-concave-shells-each-with-two-holes-simplified_0.8.json  two-concave-shells-each-with-two-holes-simplified_1.1.json  two-concave-shells-each-with-two-holes-wkt-sinusoidal.json  two-concave-shells-each-with-two-holes.json  two-concave-shells-with-holes.json  two-concave-shells.json
tests/data/geotiff/: AST_L1T_00310012006175412_20150516104359-SWIR.clipped.tif  MCD43A4.A2001055.h25v06.006.2016113010159_B01.reduced.TIF
