[project]
name = "raster-footprint"
version = "0.1.0"
authors = [{ name = "Preston Hartzell", email = "preston.hartzell@gmail.com" }]
description = "Create GeoJSON geometries that bound the extents of valid data in a raster."
readme = "README.md"
keywords = ["geojson", "raster", "footprint", "rasterio"]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = ["rasterio", "shapely"]

[project.optional-dependencies]
dev = ["black", "codespell", "mypy", "pre-commit", "pytest", "ruff"]
docs = ["sphinx~=7.1", "pydata-sphinx-theme~=0.13"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
