[project]
name = "raster-footprint"
version = "0.1.0"
authors = [{ name = "Preston Hartzell", email = "preston.hartzell@gmail.com" }]
description = "Create GeoJSON geometries that bound the extents of valid data in a raster."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["geojson", "raster", "footprint", "rasterio"]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = ["rasterio", "shapely"]

[project.optional-dependencies]
dev = [
    "black~=23.7",
    "codespell~=2.2",
    "mypy~=1.4",
    "pre-commit~=3.3",
    "pytest~=7.4",
    "ruff==0.0.282",
]
docs = ["sphinx~=7.1", "pydata-sphinx-theme~=0.13"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
