[project]
name = "raster-footprint"
version = "0.2.0"
authors = [{ name = "Preston Hartzell", email = "preston.hartzell@gmail.com" }]
description = "Create GeoJSON geometries that bound the extents of valid data in a raster."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["geojson", "footprint", "rasterio", "shapely"]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
]
dependencies = ["rasterio>=1.3", "shapely>=2.0"]

[project.scripts]
raster-footprint = "raster_footprint._cli:cli"

[project.urls]
Documentation = "https://raster-footprint.readthedocs.io"
GitHub = "https://github.com/pjhartzell/raster-footprint"
Changelog = "https://github.com/pjhartzell/raster-footprint/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black~=23.7",
    "codespell~=2.2",
    "mypy~=1.4",
    "pre-commit~=3.3",
    "pytest~=7.4",
    "ruff==0.0.282",
    "sphinx-autobuild~=2021.3",
    "tomli~=2.0; python_version<'3.11'",
]
docs = ["sphinx~=7.1", "pydata-sphinx-theme~=0.13"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.ruff.per-file-ignores]
"src/raster_footprint/_cli.py" = ["E501"]

[tool.black]
line-length = 88
